mdapipkg/objects/Payout_Mechanisms__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payout Mechanisms</relationshipLabel>
        <relationshipName>Payout_Mechanisms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payout Mechanisms</label>
    <nameField>
        <displayFormat>PMS-{000}</displayFormat>
        <label>Payout Mechanisms Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payout Mechanisms</pluralLabel>
    <recordTypes>
        <fullName>Card</fullName>
        <active>true</active>
        <label>Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>PayPal</fullName>
        <active>true</active>
        <label>PayPal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>